[package]
name = "rust"
version = "0.1.0"
edition = "2021"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "one"
path = "src/one.rs"

[[bin]]
name = "two"
path = "src/two.rs"

[[bin]]
name = "three"
path = "src/three.rs"

[[bin]]
name = "four"
path = "src/four.rs"

[[bin]]
name = "five"
path = "src/five.rs"

[[bin]]
name = "six"
path = "src/six.rs"

[[bin]]
name = "seven"
path = "src/seven.rs"

[[bin]]
name = "eight"
path = "src/eight.rs"

[[bin]]
name = "nine"
path = "src/nine.rs"

[[bin]]
name = "ten"
path = "src/ten.rs"

[[bin]]
name = "eleven"
path = "src/eleven.rs"

[[bin]]
name = "twelve"
path = "src/twelve.rs"

[[bin]]
name = "thirteen"
path = "src/thirteen.rs"

[[bin]]
name = "fourteen"
path = "src/fourteen.rs"

[[bin]]
name = "fifteen"
path = "src/fifteen.rs"

[[bin]]
name = "sixteen"
path = "src/sixteen.rs"

[[bin]]
name = "seventeen"
path = "src/seventeen.rs"

[[bin]]
name = "eighteen"
path = "src/eighteen.rs"

[[bin]]
name = "twenty"
path = "src/twenty.rs"

[dependencies]
itertools = "0.10.1"
lazy_static = "1.4.0"
regex = "1.3.9"
